// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Latex handles multiple children inside the node 1`] = `
<div>
  <span
    class="__Latex__"
  >
    Label: 
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math
          xmlns="http://www.w3.org/1998/Math/MathML"
        >
          <semantics>
            <mrow>
              <mn>
                1
              </mn>
              <mo>
                ×
              </mo>
              <mn>
                2
              </mn>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              1 \\times 2
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height:0.7278em;vertical-align:-0.0833em;"
          />
          <span
            class="mord"
          >
            1
          </span>
          <span
            class="mspace"
            style="margin-right:0.2222em;"
          />
          <span
            class="mbin"
          >
            ×
          </span>
          <span
            class="mspace"
            style="margin-right:0.2222em;"
          />
        </span>
        <span
          class="base"
        >
          <span
            class="strut"
            style="height:0.6444em;"
          />
          <span
            class="mord"
          >
            2
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`Latex renders an expression with macros 1`] = `
<div>
  <span
    class="__Latex__"
  >
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math
          xmlns="http://www.w3.org/1998/Math/MathML"
        >
          <semantics>
            <mrow>
              <mi
                mathvariant="double-struck"
              >
                R
              </mi>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              \\R
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height:0.6889em;"
          />
          <span
            class="mord mathbb"
          >
            R
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`Latex renders correctly sequences of $..$ 1`] = `
<div>
  <span
    class="__Latex__"
  >
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math
          xmlns="http://www.w3.org/1998/Math/MathML"
        >
          <semantics>
            <mrow>
              <mi>
                h
              </mi>
              <mi>
                e
              </mi>
              <mi>
                l
              </mi>
              <mi>
                l
              </mi>
              <mi>
                o
              </mi>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              hello
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height:0.6944em;"
          />
          <span
            class="mord mathnormal"
          >
            h
          </span>
          <span
            class="mord mathnormal"
          >
            e
          </span>
          <span
            class="mord mathnormal"
            style="margin-right:0.01968em;"
          >
            ll
          </span>
          <span
            class="mord mathnormal"
          >
            o
          </span>
        </span>
      </span>
    </span>
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math
          xmlns="http://www.w3.org/1998/Math/MathML"
        >
          <semantics>
            <mrow>
              <mi>
                w
              </mi>
              <mi>
                o
              </mi>
              <mi>
                r
              </mi>
              <mi>
                l
              </mi>
              <mi>
                d
              </mi>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              world
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height:0.6944em;"
          />
          <span
            class="mord mathnormal"
            style="margin-right:0.02691em;"
          >
            w
          </span>
          <span
            class="mord mathnormal"
            style="margin-right:0.02778em;"
          >
            or
          </span>
          <span
            class="mord mathnormal"
            style="margin-right:0.01968em;"
          >
            l
          </span>
          <span
            class="mord mathnormal"
          >
            d
          </span>
        </span>
      </span>
    </span>
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math
          xmlns="http://www.w3.org/1998/Math/MathML"
        >
          <semantics>
            <mrow>
              <mi>
                b
              </mi>
              <mi>
                o
              </mi>
              <mi>
                o
              </mi>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              boo
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height:0.6944em;"
          />
          <span
            class="mord mathnormal"
          >
            b
          </span>
          <span
            class="mord mathnormal"
          >
            oo
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`Latex renders raw LaTeX incase of error by default 1`] = `
<div>
  <span
    class="__Latex__"
  >
    Broken formulate: 
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math
          xmlns="http://www.w3.org/1998/Math/MathML"
        >
          <semantics>
            <mrow>
              <mo>
                →
              </mo>
              <mi>
                W
              </mi>
              <mi>
                t
              </mi>
              <mover
                accent="true"
              >
                <mi>
                  b
                </mi>
                <mo>
                  ˉ
                </mo>
              </mover>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              \\to W t\\bar b
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height:0.3669em;"
          />
          <span
            class="mrel"
          >
            →
          </span>
          <span
            class="mspace"
            style="margin-right:0.2778em;"
          />
        </span>
        <span
          class="base"
        >
          <span
            class="strut"
            style="height:0.8312em;"
          />
          <span
            class="mord mathnormal"
            style="margin-right:0.13889em;"
          >
            W
          </span>
          <span
            class="mord mathnormal"
          >
            t
          </span>
          <span
            class="mord accent"
          >
            <span
              class="vlist-t"
            >
              <span
                class="vlist-r"
              >
                <span
                  class="vlist"
                  style="height:0.8312em;"
                >
                  <span
                    style="top:-3em;"
                  >
                    <span
                      class="pstrut"
                      style="height:3em;"
                    />
                    <span
                      class="mord mathnormal"
                    >
                      b
                    </span>
                  </span>
                  <span
                    style="top:-3.2634em;"
                  >
                    <span
                      class="pstrut"
                      style="height:3em;"
                    />
                    <span
                      class="accent-body"
                      style="left:-0.25em;"
                    >
                      <span
                        class="mord"
                      >
                        ˉ
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </span>
    .
  </span>
</div>
`;

exports[`Latex renders text that has a LaTeX formula with custom delimiter 1`] = `
<div>
  <span
    class="__Latex__"
  >
    three processes 
    <span
      class="katex-display"
    >
      <span
        class="katex"
      >
        <span
          class="katex-mathml"
        >
          <math
            display="block"
            xmlns="http://www.w3.org/1998/Math/MathML"
          >
            <semantics>
              <mrow>
                <msup>
                  <mi>
                    e
                  </mi>
                  <mo>
                    +
                  </mo>
                </msup>
                <msup>
                  <mi>
                    e
                  </mi>
                  <mo>
                    −
                  </mo>
                </msup>
              </mrow>
              <annotation
                encoding="application/x-tex"
              >
                e^+e^-
              </annotation>
            </semantics>
          </math>
        </span>
        <span
          aria-hidden="true"
          class="katex-html"
        >
          <span
            class="base"
          >
            <span
              class="strut"
              style="height:0.8213em;"
            />
            <span
              class="mord"
            >
              <span
                class="mord mathnormal"
              >
                e
              </span>
              <span
                class="msupsub"
              >
                <span
                  class="vlist-t"
                >
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height:0.8213em;"
                    >
                      <span
                        style="top:-3.113em;margin-right:0.05em;"
                      >
                        <span
                          class="pstrut"
                          style="height:2.7em;"
                        />
                        <span
                          class="sizing reset-size6 size3 mtight"
                        >
                          <span
                            class="mbin mtight"
                          >
                            +
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
            <span
              class="mord"
            >
              <span
                class="mord mathnormal"
              >
                e
              </span>
              <span
                class="msupsub"
              >
                <span
                  class="vlist-t"
                >
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height:0.8213em;"
                    >
                      <span
                        style="top:-3.113em;margin-right:0.05em;"
                      >
                        <span
                          class="pstrut"
                          style="height:2.7em;"
                        />
                        <span
                          class="sizing reset-size6 size3 mtight"
                        >
                          <span
                            class="mbin mtight"
                          >
                            −
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`Latex renders text that has multiple LaTeX formulas with $ delimiter 1`] = `
<div>
  <span
    class="__Latex__"
  >
    three processes 
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math
          xmlns="http://www.w3.org/1998/Math/MathML"
        >
          <semantics>
            <mrow>
              <msup>
                <mi>
                  e
                </mi>
                <mo>
                  +
                </mo>
              </msup>
              <msup>
                <mi>
                  e
                </mi>
                <mo>
                  −
                </mo>
              </msup>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              e^+e^-
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height:0.7713em;"
          />
          <span
            class="mord"
          >
            <span
              class="mord mathnormal"
            >
              e
            </span>
            <span
              class="msupsub"
            >
              <span
                class="vlist-t"
              >
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height:0.7713em;"
                  >
                    <span
                      style="top:-3.063em;margin-right:0.05em;"
                    >
                      <span
                        class="pstrut"
                        style="height:2.7em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mbin mtight"
                        >
                          +
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
          <span
            class="mord"
          >
            <span
              class="mord mathnormal"
            >
              e
            </span>
            <span
              class="msupsub"
            >
              <span
                class="vlist-t"
              >
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height:0.7713em;"
                  >
                    <span
                      style="top:-3.063em;margin-right:0.05em;"
                    >
                      <span
                        class="pstrut"
                        style="height:2.7em;"
                      />
                      <span
                        class="sizing reset-size6 size3 mtight"
                      >
                        <span
                          class="mbin mtight"
                        >
                          −
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </span>
    , gluon-gluon and 
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math
          xmlns="http://www.w3.org/1998/Math/MathML"
        >
          <semantics>
            <mrow>
              <mi>
                γ
              </mi>
              <mi>
                γ
              </mi>
              <mo>
                →
              </mo>
              <mi>
                W
              </mi>
              <mi>
                t
              </mi>
              <mover
                accent="true"
              >
                <mi>
                  b
                </mi>
                <mo>
                  ˉ
                </mo>
              </mover>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              \\gamma\\gamma \\to W t\\bar b
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height:0.625em;vertical-align:-0.1944em;"
          />
          <span
            class="mord mathnormal"
            style="margin-right:0.05556em;"
          >
            γγ
          </span>
          <span
            class="mspace"
            style="margin-right:0.2778em;"
          />
          <span
            class="mrel"
          >
            →
          </span>
          <span
            class="mspace"
            style="margin-right:0.2778em;"
          />
        </span>
        <span
          class="base"
        >
          <span
            class="strut"
            style="height:0.8312em;"
          />
          <span
            class="mord mathnormal"
            style="margin-right:0.13889em;"
          >
            W
          </span>
          <span
            class="mord mathnormal"
          >
            t
          </span>
          <span
            class="mord accent"
          >
            <span
              class="vlist-t"
            >
              <span
                class="vlist-r"
              >
                <span
                  class="vlist"
                  style="height:0.8312em;"
                >
                  <span
                    style="top:-3em;"
                  >
                    <span
                      class="pstrut"
                      style="height:3em;"
                    />
                    <span
                      class="mord mathnormal"
                    >
                      b
                    </span>
                  </span>
                  <span
                    style="top:-3.2634em;"
                  >
                    <span
                      class="pstrut"
                      style="height:3em;"
                    />
                    <span
                      class="accent-body"
                      style="left:-0.25em;"
                    >
                      <span
                        class="mord"
                      >
                        ˉ
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </span>
    .
  </span>
</div>
`;

exports[`Latex renders text that has multiple LaTeX formulas with $$ delimiter 1`] = `
<div>
  <span
    class="__Latex__"
  >
    three processes 
    <span
      class="katex-display"
    >
      <span
        class="katex"
      >
        <span
          class="katex-mathml"
        >
          <math
            display="block"
            xmlns="http://www.w3.org/1998/Math/MathML"
          >
            <semantics>
              <mrow>
                <msup>
                  <mi>
                    e
                  </mi>
                  <mo>
                    +
                  </mo>
                </msup>
                <msup>
                  <mi>
                    e
                  </mi>
                  <mo>
                    −
                  </mo>
                </msup>
              </mrow>
              <annotation
                encoding="application/x-tex"
              >
                e^+e^-
              </annotation>
            </semantics>
          </math>
        </span>
        <span
          aria-hidden="true"
          class="katex-html"
        >
          <span
            class="base"
          >
            <span
              class="strut"
              style="height:0.8213em;"
            />
            <span
              class="mord"
            >
              <span
                class="mord mathnormal"
              >
                e
              </span>
              <span
                class="msupsub"
              >
                <span
                  class="vlist-t"
                >
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height:0.8213em;"
                    >
                      <span
                        style="top:-3.113em;margin-right:0.05em;"
                      >
                        <span
                          class="pstrut"
                          style="height:2.7em;"
                        />
                        <span
                          class="sizing reset-size6 size3 mtight"
                        >
                          <span
                            class="mbin mtight"
                          >
                            +
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
            <span
              class="mord"
            >
              <span
                class="mord mathnormal"
              >
                e
              </span>
              <span
                class="msupsub"
              >
                <span
                  class="vlist-t"
                >
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height:0.8213em;"
                    >
                      <span
                        style="top:-3.113em;margin-right:0.05em;"
                      >
                        <span
                          class="pstrut"
                          style="height:2.7em;"
                        />
                        <span
                          class="sizing reset-size6 size3 mtight"
                        >
                          <span
                            class="mbin mtight"
                          >
                            −
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </span>
    , gluon-gluon and 
    <span
      class="katex-display"
    >
      <span
        class="katex"
      >
        <span
          class="katex-mathml"
        >
          <math
            display="block"
            xmlns="http://www.w3.org/1998/Math/MathML"
          >
            <semantics>
              <mrow>
                <mi>
                  γ
                </mi>
                <mi>
                  γ
                </mi>
                <mo>
                  →
                </mo>
                <mi>
                  W
                </mi>
                <mi>
                  t
                </mi>
                <mover
                  accent="true"
                >
                  <mi>
                    b
                  </mi>
                  <mo>
                    ˉ
                  </mo>
                </mover>
              </mrow>
              <annotation
                encoding="application/x-tex"
              >
                \\gamma\\gamma \\to W t\\bar b
              </annotation>
            </semantics>
          </math>
        </span>
        <span
          aria-hidden="true"
          class="katex-html"
        >
          <span
            class="base"
          >
            <span
              class="strut"
              style="height:0.625em;vertical-align:-0.1944em;"
            />
            <span
              class="mord mathnormal"
              style="margin-right:0.05556em;"
            >
              γγ
            </span>
            <span
              class="mspace"
              style="margin-right:0.2778em;"
            />
            <span
              class="mrel"
            >
              →
            </span>
            <span
              class="mspace"
              style="margin-right:0.2778em;"
            />
          </span>
          <span
            class="base"
          >
            <span
              class="strut"
              style="height:0.8312em;"
            />
            <span
              class="mord mathnormal"
              style="margin-right:0.13889em;"
            >
              W
            </span>
            <span
              class="mord mathnormal"
            >
              t
            </span>
            <span
              class="mord accent"
            >
              <span
                class="vlist-t"
              >
                <span
                  class="vlist-r"
                >
                  <span
                    class="vlist"
                    style="height:0.8312em;"
                  >
                    <span
                      style="top:-3em;"
                    >
                      <span
                        class="pstrut"
                        style="height:3em;"
                      />
                      <span
                        class="mord mathnormal"
                      >
                        b
                      </span>
                    </span>
                    <span
                      style="top:-3.2634em;"
                    >
                      <span
                        class="pstrut"
                        style="height:3em;"
                      />
                      <span
                        class="accent-body"
                        style="left:-0.25em;"
                      >
                        <span
                          class="mord"
                        >
                          ˉ
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </span>
    .
  </span>
</div>
`;
